# mds_challenge

./: .gitignore  README.md  attacks.py  canny.py  dwt_dct.py  pyproject.toml  requirements.txt
findbrivateknowledge/: README.md  attack.py  detection.py  embedding.py  findbrivateknowledge.npy  findbrivateknowledge_attack.py  findbrivateknowledge_demo.py  findbrivateknowledge_detection.py  findbrivateknowledge_embedding.py  findbrivateknowledge_roc_curve.py  random_bits.npy  random_watermark.npy  roc_curve.py
